# ocr_handwriting_aligner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
resources/landscape/: handwriting_line_images_coordinates.xml  handwriting_line_images_label_coordinates.xml
resources/potrait/: handwriting_line_images_coordinates.xml  handwriting_line_images_label_coordinates.xml
src/ocr_handwriting_aligner/: config.py  image_utils.py  margin.py  parse_transcript.py  pipeline.py  quality_classifier.py  utility.py  utils.py
tests/crop_image/: test_crop_image.py
tests/get_margin/: test_get_margin.py
tests/parse_transcript/: test_parse_transcript.py
tests/parse_transcript/data/: P000010_v001.csv
tests/parse_xml/: test_parse_xml.py
tests/parse_xml/data/: handwriting_line_images_coordinates.xml
tests/pdf_to_images/: test_pdf_to_images.py
tests/quality_classifier/: test_quality_classifier.py
